--- a/layouts/default.html
+++ b/layouts/default.html
@@ -5,7 +5,7 @@
 
     <!-- tray charset -->
     {{ html.charset() }}
-    <meta https-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- tray meta tags -->
@@ -17,7 +17,7 @@
     <!-- theme styles -->
     <link rel="stylesheet" href="{{ asset('css/bootstrap/bootstrap.min.css') }}" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" type="text/css">
-    <link href="httpss://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('css/theme.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ asset('css/style.css') }}" type="text/css">
@@ -70,7 +70,7 @@
                   <div class="product-big-tall2"><div class="title-holder">
                   <span class="tall-title2">MOTOSPEED</span>
                   <div class="btn-holder5">
-                    <button class="btn-login"><a href="httpss://www.tecnomult.com/motospeed">VEJA MAIS</a></button>
+                    <button class="btn-login"><a href="https://www.tecnomult.com/motospeed">VEJA MAIS</a></button>
                     </div>
                     </div>
                   </div>
@@ -79,13 +79,13 @@
                   <div class="product-small">
                     <span class="small-title">CORSAIR</span>
                     <div class="btn-holder3">
-                      <button class="btn-login-black"><a href="httpss://www.tecnomult.com/corsair">VEJA MAIS</a></button>
+                      <button class="btn-login-black"><a href="https://www.tecnomult.com/corsair">VEJA MAIS</a></button>
                       </div>
                   </div>
                   <div class="product-small2">
                     <span class="small-title2">ROCCAT</span>
                     <div class="btn-holder4">
-                      <button class="btn-login"><a href="httpss://www.tecnomult.com/roccat">VEJA MAIS</a></button>
+                      <button class="btn-login"><a href="https://www.tecnomult.com/roccat">VEJA MAIS</a></button>
                       </div>
                   </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="title-holder">
                     <span class="wide-title">HYPERX</span>
                     <div class="btn-holder">
-                      <button class="btn-login"><a href="httpss://www.tecnomult.com/hyperx">VEJA MAIS</a></button>
+                      <button class="btn-login"><a href="https://www.tecnomult.com/hyperx">VEJA MAIS</a></button>
                       </div>
                       </div>
                   </div>
@@ -103,7 +103,7 @@
                   <div class="product-big-tall"><div class="title-holder">
                   <span class="tall-title">LOGITECH</span>
                   <div class="btn-holder2">
-                    <button class="btn-login"><a href="httpss://www.tecnomult.com/logitech">VEJA MAIS</a></button>
+                    <button class="btn-login"><a href="https://www.tecnomult.com/logitech">VEJA MAIS</a></button>
                     </div>
                     </div></div>
                 </div>
