--- a/layouts/default.html
+++ b/layouts/default.html
@@ -106,6 +106,18 @@
                     <button class="btn-login"><a href="https://www.tecnomult.com/logitech">VEJA MAIS</a></button>
                     </div>
                     </div></div>
+                    <div class="product-small2">
+                      <span class="small-title2">ROCCAT</span>
+                      <div class="btn-holder4">
+                        <button class="btn-login"><a href="https://www.tecnomult.com/roccat">VEJA MAIS</a></button>
+                        </div>
+                    </div>
+                    <div class="product-small2">
+                      <span class="small-title2">ROCCAT</span>
+                      <div class="btn-holder4">
+                        <button class="btn-login"><a href="https://www.tecnomult.com/roccat">VEJA MAIS</a></button>
+                        </div>
+                    </div>
                 </div>
               </div>
             </div>
