--- a/layouts/default.html
+++ b/layouts/default.html
@@ -107,15 +107,15 @@
                     </div>
                     </div></div>
                     <div class="product-small3">
-                      <span class="small-title2">ROCCAT</span>
+                      <span class="small-title2">LOGITECH</span>
                       <div class="btn-holder4">
-                        <button class="btn-login"><a href="https://www.tecnomult.com/roccat">VEJA MAIS</a></button>
+                        <button class="btn-login"><a href="https://www.tecnomult.com/logitech">VEJA MAIS</a></button>
                         </div>
                     </div>
                     <div class="product-small4">
-                      <span class="small-title2">ROCCAT</span>
+                      <span class="small-title2">MOTOSPEED</span>
                       <div class="btn-holder4">
-                        <button class="btn-login"><a href="https://www.tecnomult.com/roccat">VEJA MAIS</a></button>
+                        <button class="btn-login"><a href="https://www.tecnomult.com/motospeed">VEJA MAIS</a></button>
                         </div>
                     </div>
                 </div>
