--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,9 @@
   .product-middle{
     display: none !important;
   }
+  .dropbtn{
+    font-size: 13px !important;
+  }
 }
 
 @media screen and (max-width: 1406px){
